# roda-hve

./: .gitignore  LICENSE  README.md  museum-sidekick-prompt.md
.copilot-tracking/prd-sessions/: museum-sidekick.state.json
.github/hooks/shared/telemetry/: Invoke-TelemetryClean.ps1  Invoke-TelemetryCollector.ps1  Invoke-TelemetryReport.ps1  _telemetry_core.py  clean-telemetry.sh  generate-telemetry-report.sh  pyproject.toml  report.html  telemetry-collector.sh
.github/hooks/shared/telemetry/tests/: fuzz_harness.py  test_telemetry_core.py
.github/hooks/shared/telemetry/tests/corpus/: 0_jsonl_event  1_event_alias  2_build_entry  README.md
.github/prompts/: onboard-case.prompt.md  plan-trueHveCoreBuild.prompt.md
cases/: README.md
cases/_template/: README.md
cases/slow-reviews/: README.md
cases/unclear-requirements/: README.md
copilot-tracking/: github-copilot-observability.md
docs/: 01-overview.md  02-prerequisites.md  03-step-1-scaffold.md  04-step-2-foundry-agent.md  05-step-3-met-tools.md  06-step-4-tests-selfheal.md  07-step-5-iac-cicd.md  08-step-6-coding-agent.md  09-step-7-deploy-demo.md  10-caira-golden-accelerator.md  11-met-api-reference.md  12-build-approaches.md  README.md  adopt-scale.html  build-approaches.html  getting-started.html  ideas.html  index.html  playbooks.html  reference.html  resources.html  walkthrough.html
docs/assets/: styles.css
museum-sidekick/: .env.example  .gitignore  PRD.md  README.md  SPEC.md  azure.yaml  package-lock.json  package.json  tsconfig.base.json
museum-sidekick/infra/: .terraform.lock.hcl  main.tf  (+3 more)
(+28 files in other folders)
